front-end/app/styles/_card.scss
md-card {
  margin: 0; //to overwrite AM 8px
  transition: all 0.3s;

  .card-image {
    position: relative;

    .ua-ie & {
      height: 100%;
    }
  }

  .ua-ie & {
    & .item-link{
      word-wrap: break-word;
      display: block;
      word-break: break-all;
    }
  }
}

.card-hover {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: rgba(0, 0, 0, 0.7);
  opacity: 0;

  .pick {
    position: absolute;
    padding: 10px;
    left: 0;
    transition: display 1s cubic-bezier(0.25, 0.8, 0.25, 1);

    .checked {
      display: none;
    }

    &:hover {
      .checked {
        display: block;
      }

      .unchecked {
        display: none;
      }
    }
  }

  md-icon.icon-kind {
    color: rgba(255, 255, 255, 0.6);
  }
}

.card-cover {
  position: relative;
  transition: all 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
  overflow: hidden;

  &:before {
    content: '';
    display: block;
    height: 0;
    width: 100%;
    padding-bottom: 66.67%;
  }

  img {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    display: block;
  }

  &:after {
    content: "";
    box-shadow: inset 0 0 3em rgba(0,0,0, .15);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 2;
  }

  .icon-kind {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%,-50%);
    font-size: 3rem;
    color: rgba(0,0,0, 0.33);
    z-index: 1;
  }
}

// Override md-button width
.card-cover-menu-button {
  width: 32px !important;
}

.card__icon-holder {
  display: flex;
  flex-direction: row;
  position: absolute;
  top: 2px;
  left: 20px;
  z-index: 3 ;

  md-icon {
    color: #fff;
    text-shadow: 1px 1px 2px rgba(0, 0,0, .37);
  }
}

.ribbon {
  position: absolute;
  left: 20px;
  background-image: url('../images/bookmark.svg');
  background-size: contain;
  background-repeat: no-repeat;
  filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12,Color='#444')";
  filter: url(#drop-shadow);
  filter: drop-shadow(3px 3px 3px rgba(0,0,0,0.5));
  z-index: 3;
  opacity: .6;
  width: 33px;
  height: 53px;
}

.pattern {
  position: absolute;
  top: 0;
  left: 0;
  transform: rotateY(180deg);
  width: 100%;
  height: 100%;
}

.sheet {
  position: absolute;
  height: 100%;
  width: 100%;
  transform: rotate(45deg);
  filter: drop-shadow(0px 0px 10px rgba(0,0,0,0.2));

  &.up-left {
    left: -25%;
    top: 17%;
  }

  &.low-left {
    left: -60%;
    top: 45%;
  }

  &.low-right {
    right: -33%;
    bottom: -45%;
    height: 150%;
  }
}

.card-cover,
.embeddedMaterial {
  &.description .pattern {
      background-color: $green1;
      .sheet {
        @include pattern-color($green1);
      }
    }

  &.image .pattern {
    background-color: $blue;
    .sheet {
      @include pattern-color($blue);
    }
  }
  &.assessment .pattern {
    background-color: $green2;
    .sheet {
      @include pattern-color($green2);
    }
  }
  &.assignment .pattern {
      background-color: $pinky;
      .sheet {
        @include pattern-color($pinky);
      }
    }

  &.dvr .pattern {
    background-color: $greengrass;
    .sheet {
      @include pattern-color($greengrass);
    }
  }
  &.portfolio .pattern {
    background-color: $lilac;
    .sheet {
      @include pattern-color($lilac);
    }
  }
  &.casino .pattern {
    background-color: $violet;
    .sheet {
      @include pattern-color($violet);
    }
  }
  &.web_asset .pattern {
    background-color: $navy;
    .sheet {
      @include pattern-color($navy);
    }
  }
  &.audiotrack .pattern {
    background-color: $cyan;
    .sheet {
      @include pattern-color($cyan);
    }
  }
  &.ondemand_video .pattern {
    background-color: $salad;
    .sheet {
      @include pattern-color($salad);
    }
  }
  &.web .pattern {
    background-color: $royal;
    .sheet {
      @include pattern-color($royal);
    }
  }
}

